[package]

name = "screenshot"
version = "0.0.8"
authors = ["Alex <alexchandel@gmail.com>"]
description = "Get a bitmap image of any display."
keywords = ["graphics", "image", "gui", "scripting"]
repository = "https://github.com/alexchandel/screenshot-rs"
readme = "README.md"
license = "CC0-1.0"

[target.x86_64-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"
[target.i686-unknown-linux-gnu.dependencies.xlib]
git = "https://github.com/servo/rust-xlib"

[dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies.winapi]
git = "https://github.com/DeepSignSecurity/winapi-rs.git"
branch = "0.3"
package = "winapi"
features = ["windef", "ntdef", "minwindef", "wingdi", "winuser"]

[dev-dependencies]
bmp = "*"
image = "*"

[profile.release]
lto = true
